--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,4 +8,60 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.app.settingsActivity$PlaceholderFragment">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:text="Number of Turns"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="125dp" />
+
+    <EditText
+        android:id="@+id/turns"
+        android:text="10"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:inputType="numberDecimal"
+        android:numeric="decimal"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:text="length of word"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="94dp"
+        android:layout_below="@+id/textView" />
+
+    <EditText
+        android:id="@+id/wordlength"
+        android:text="5"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:inputType="numberDecimal"
+        android:numeric="decimal"
+        android:layout_below="@+id/textView2"
+        android:layout_alignLeft="@+id/turns"
+        android:layout_alignStart="@+id/turns" />
+
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save Settings"
+        android:id="@+id/button_settings"
+        android:onClick="saveSettings"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_marginTop="51dp"
+        android:layout_below="@+id/textView2" />
+
+
+
 </RelativeLayout>
