--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/q"
         android:id="@+id/button_q"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="@string/w"
         android:id="@+id/button_w"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_q"
         android:layout_toRightOf="@+id/button_q" />
 
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:text="@string/e"
         android:id="@+id/button_e"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_w"
         android:layout_toRightOf="@+id/button_w" />
 
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="@string/r"
         android:id="@+id/button_r"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_e"
         android:layout_toRightOf="@+id/button_e" />
 
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:text="@string/t"
         android:id="@+id/button_t"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_r"
         android:layout_toRightOf="@+id/button_r" />
 
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:text="@string/y"
         android:id="@+id/button_y"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_t"
         android:layout_toRightOf="@+id/button_t" />
 
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:text="@string/u"
         android:id="@+id/button_u"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_y"
         android:layout_toRightOf="@+id/button_y" />
 
@@ -80,7 +80,7 @@
         android:layout_height="wrap_content"
         android:text="@string/i"
         android:id="@+id/button_i"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_u"
         android:layout_toRightOf="@+id/button_u" />
 
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:text="@string/o"
         android:id="@+id/button_o"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_i"
         android:layout_toRightOf="@+id/button_i" />
 
@@ -98,7 +98,7 @@
         android:layout_height="wrap_content"
         android:text="@string/p"
         android:id="@+id/button_p"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_alignTop="@+id/button_o"
         android:layout_toRightOf="@+id/button_o" />
 
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:text="@string/a"
         android:id="@+id/button_a"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_marginLeft="20dp"
         android:layout_below="@+id/button_w"
         android:layout_alignLeft="@+id/button_q"
@@ -118,7 +118,7 @@
         android:layout_height="wrap_content"
         android:text="@string/s"
         android:id="@+id/button_s"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_a"
         android:layout_below="@+id/button_w" />
 
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:text="@string/d"
         android:id="@+id/button_d"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_s"
         android:layout_below="@+id/button_w" />
 
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:text="@string/f"
         android:id="@+id/button_f"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_d"
         android:layout_below="@+id/button_w" />
 
@@ -145,7 +145,7 @@
         android:layout_height="wrap_content"
         android:text="@string/g"
         android:id="@+id/button_g"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_f"
         android:layout_below="@+id/button_w" />
 
@@ -154,7 +154,7 @@
         android:layout_height="wrap_content"
         android:text="@string/h"
         android:id="@+id/button_h"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_g"
         android:layout_below="@+id/button_w" />
 
@@ -163,7 +163,7 @@
         android:layout_height="wrap_content"
         android:text="@string/j"
         android:id="@+id/button_j"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_h"
         android:layout_below="@+id/button_w" />
 
@@ -172,7 +172,7 @@
         android:layout_height="wrap_content"
         android:text="@string/k"
         android:id="@+id/button_k"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_j"
         android:layout_below="@+id/button_w" />
 
@@ -181,7 +181,7 @@
         android:layout_height="wrap_content"
         android:text="@string/l"
         android:id="@+id/button_l"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_k"
         android:layout_below="@+id/button_w" />
 
@@ -190,7 +190,7 @@
         android:layout_height="wrap_content"
         android:text="@string/z"
         android:id="@+id/button_z"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_below="@+id/button_a"
         android:layout_alignLeft="@+id/button_q"
         android:layout_alignStart="@+id/button_q" />
@@ -200,7 +200,7 @@
         android:layout_height="wrap_content"
         android:text="@string/x"
         android:id="@+id/button_x"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_z"
         android:layout_below="@+id/button_a" />
 
@@ -209,7 +209,7 @@
         android:layout_height="wrap_content"
         android:text="@string/c"
         android:id="@+id/button_c"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_x"
         android:layout_below="@+id/button_a" />
 
@@ -218,7 +218,7 @@
         android:layout_height="wrap_content"
         android:text="@string/v"
         android:id="@+id/button_v"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_c"
         android:layout_below="@+id/button_a" />
 
@@ -227,7 +227,7 @@
         android:layout_height="wrap_content"
         android:text="@string/b"
         android:id="@+id/button_b"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_v"
         android:layout_below="@+id/button_a" />
 
@@ -236,7 +236,7 @@
         android:layout_height="wrap_content"
         android:text="@string/n"
         android:id="@+id/button_n"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_b"
         android:layout_below="@+id/button_a" />
 
@@ -245,7 +245,7 @@
         android:layout_height="wrap_content"
         android:text="@string/m"
         android:id="@+id/button_m"
-        android:onClick="GameTurns"
+        android:onClick="gameTurns"
         android:layout_toRightOf="@+id/button_n"
         android:layout_below="@+id/button_a" />
 
