--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,40 +5,39 @@ android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/IdView"
-        android:layout_marginRight="20dp"
-        android:layout_centerVertical="true"
+        android:layout_alignTop="@+id/NameView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="31dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/NameView"
-        android:layout_marginRight="20dp"
-        android:layout_alignTop="@+id/IdView"
-        android:layout_toRightOf="@id/IdView"
-         />
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/IdView"
+        android:layout_marginLeft="28dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/WordView"
-        android:layout_marginRight="20dp"
         android:layout_alignTop="@+id/NameView"
-        android:layout_toRightOf="@+id/NameView" />
+        android:layout_toRightOf="@+id/NameView"
+        android:layout_marginLeft="36dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="25dp"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/MistakesView"
-        android:layout_alignTop="@+id/IdView"
-        android:layout_toRightOf="@id/WordView"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignTop="@+id/WordView"
+        android:layout_toRightOf="@+id/WordView"
+        android:layout_marginLeft="36dp" />
 </RelativeLayout>
